fix(loading-spinner): spinner was streched on ie (#418)

--- a/src/components/structural/loading-spinner/loading-spinner.module.css
+++ b/src/components/structural/loading-spinner/loading-spinner.module.css
@@ -14,7 +14,7 @@
   animation: loading 1.5s linear infinite;
 
   .loadingWrapper & {
-    width: auto;
+    width: 100%;
 
     &.loadingSpinner_isSmall {
       width: 30px;
